// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewSection > matches snapshot (logged in shows form) 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-txsx4p-MuiTypography-root"
    >
      Leave a review
    </h6>
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_1_"
        id="_r_1_-label"
      >
        Your review
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-zsp0bh-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <textarea
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-w4nesw-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_1_"
          style="height: 0px; overflow: hidden;"
        />
        <textarea
          aria-hidden="true"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-w4nesw-MuiInputBase-input-MuiOutlinedInput-input"
          readonly=""
          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
          tabindex="-1"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Your review
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="MuiStack-root css-1sos3zc-MuiStack-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
      >
        Rating:
      </p>
      <span
        class="MuiRating-root MuiRating-sizeMedium css-1xc33vf-MuiRating-root"
      >
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_2_-_r_3_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            1 Star
          </span>
        </label>
        <input
          class="MuiRating-visuallyHidden"
          id="_r_2_-_r_3_"
          name="_r_2_"
          type="radio"
          value="1"
        />
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_2_-_r_4_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            2 Stars
          </span>
        </label>
        <input
          class="MuiRating-visuallyHidden"
          id="_r_2_-_r_4_"
          name="_r_2_"
          type="radio"
          value="2"
        />
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_2_-_r_5_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            3 Stars
          </span>
        </label>
        <input
          class="MuiRating-visuallyHidden"
          id="_r_2_-_r_5_"
          name="_r_2_"
          type="radio"
          value="3"
        />
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_2_-_r_6_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            4 Stars
          </span>
        </label>
        <input
          class="MuiRating-visuallyHidden"
          id="_r_2_-_r_6_"
          name="_r_2_"
          type="radio"
          value="4"
        />
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_2_-_r_7_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            5 Stars
          </span>
        </label>
        <input
          checked=""
          class="MuiRating-visuallyHidden"
          id="_r_2_-_r_7_"
          name="_r_2_"
          type="radio"
          value="5"
        />
        <label
          class="MuiRating-label MuiRating-pristine css-hlbajn-MuiRating-label"
        >
          <input
            class="MuiRating-visuallyHidden"
            id="_r_2_-empty"
            name="_r_2_"
            type="radio"
            value=""
          />
          <span
            class="MuiRating-visuallyHidden"
          >
            Empty
          </span>
        </label>
      </span>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      Submit review
    </button>
  </div>
</DocumentFragment>
`;

exports[`ReviewSection > matches snapshot (logged out shows Sign in) 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-txsx4p-MuiTypography-root"
    >
      Leave a review
    </h6>
    <div
      class="MuiStack-root css-1sazv7p-MuiStack-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard css-k1p3sh-MuiPaper-root-MuiAlert-root"
        role="alert"
        style="--Paper-shadow: none;"
      >
        <div
          class="MuiAlert-icon css-vab54s-MuiAlert-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
            data-testid="InfoOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message css-zioonp-MuiAlert-message"
        >
          You need to sign in to leave a review.
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Sign in
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReviewSection > should match a snapshot when logged in 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-txsx4p-MuiTypography-root"
    >
      Leave a review
    </h6>
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_2_"
        id="_r_2_-label"
      >
        Your review
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-zsp0bh-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <textarea
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-w4nesw-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_2_"
          style="height: 0px; overflow: hidden;"
        />
        <textarea
          aria-hidden="true"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-w4nesw-MuiInputBase-input-MuiOutlinedInput-input"
          readonly=""
          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
          tabindex="-1"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Your review
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="MuiStack-root css-1sos3zc-MuiStack-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
      >
        Rating:
      </p>
      <span
        class="MuiRating-root MuiRating-sizeMedium css-1xc33vf-MuiRating-root"
      >
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_3_-_r_4_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            1 Star
          </span>
        </label>
        <input
          class="MuiRating-visuallyHidden"
          id="_r_3_-_r_4_"
          name="_r_3_"
          type="radio"
          value="1"
        />
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_3_-_r_5_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            2 Stars
          </span>
        </label>
        <input
          class="MuiRating-visuallyHidden"
          id="_r_3_-_r_5_"
          name="_r_3_"
          type="radio"
          value="2"
        />
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_3_-_r_6_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            3 Stars
          </span>
        </label>
        <input
          class="MuiRating-visuallyHidden"
          id="_r_3_-_r_6_"
          name="_r_3_"
          type="radio"
          value="3"
        />
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_3_-_r_7_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            4 Stars
          </span>
        </label>
        <input
          class="MuiRating-visuallyHidden"
          id="_r_3_-_r_7_"
          name="_r_3_"
          type="radio"
          value="4"
        />
        <label
          class="css-hlbajn-MuiRating-label"
          for="_r_3_-_r_8_"
        >
          <span
            class="MuiRating-icon MuiRating-iconFilled css-1sagf1d-MuiRating-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
              data-testid="StarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
              />
            </svg>
          </span>
          <span
            class="MuiRating-visuallyHidden"
          >
            5 Stars
          </span>
        </label>
        <input
          checked=""
          class="MuiRating-visuallyHidden"
          id="_r_3_-_r_8_"
          name="_r_3_"
          type="radio"
          value="5"
        />
        <label
          class="MuiRating-label MuiRating-pristine css-hlbajn-MuiRating-label"
        >
          <input
            class="MuiRating-visuallyHidden"
            id="_r_3_-empty"
            name="_r_3_"
            type="radio"
            value=""
          />
          <span
            class="MuiRating-visuallyHidden"
          >
            Empty
          </span>
        </label>
      </span>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      Submit review
    </button>
  </div>
</DocumentFragment>
`;

exports[`ReviewSection > should match a snapshot when logged out 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-txsx4p-MuiTypography-root"
    >
      Leave a review
    </h6>
    <div
      class="MuiStack-root css-1sazv7p-MuiStack-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard css-k1p3sh-MuiPaper-root-MuiAlert-root"
        role="alert"
        style="--Paper-shadow: none;"
      >
        <div
          class="MuiAlert-icon css-vab54s-MuiAlert-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
            data-testid="InfoOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message css-zioonp-MuiAlert-message"
        >
          You need to sign in to leave a review.
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Sign in
      </button>
    </div>
  </div>
</DocumentFragment>
`;
